fixed bug on smartphone display cause overflow

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     background: var(--primary);
     position: sticky;
     top: 0;
-    width: 100vw;
+    width: 100%;
     padding: 20px 0;
     border-bottom: 4px solid var(--secondary);
     z-index: 1000;
@@ -149,14 +149,14 @@ body{
 
 
   .aboutus {
-    width: 100vw;
+    width: 100%;
     padding: 10px;
     margin-top: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
+    overflow-x: hidden;
     position: relative;
   }
   
@@ -228,7 +228,7 @@ body{
   padding-top: 90px;
   left: 0;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: auto;
   background-color: rgba(0,0,0,0.9);
@@ -316,7 +316,7 @@ body{
 
   .hero {
     height: 40vh;
-    width: 100vw;
+    width: 100%;
     margin-top: 20px;
     padding-left: 10px;
     position: relative;
